css/src/generic.scss
/* ... */
#article {
    max-width: $content-width; width: 100%; margin: 0 auto; padding: $content-padding;
    background: white;

    main, aside {
        
        > *:first-child,
        > script:first-child + *,
        > style:first-child + * {
            margin-top: 0 !important;
        }

        > *:last-child {
            margin-bottom: 0 !important;
        }
    }
    
    
    #main {
        display: inline-block; vertical-align: top;
        width: 66%;
    }
    
    #aside {
        display: inline-block; vertical-align: top;
        width: 27.5%; margin-left: 3.49%; padding-left: 3%;
        border-left: .3rem dashed #e3e3e3;
    }
    
    @include ON_MOBILE {
        
        #main {
            width: 100%;
        }
        
        #aside {
            width: 100%; margin: $content-padding 0 0 0;
        }
    }
    
    
    
    
    
    /* TEXT STRUCTURE ELEMENTS */

    h1, h2, h3, h4 {
        line-height: 1.5em;
    }

    h2, h3, h4 {
        margin: 1.8em 0 1em 0;
    }

    h1 {
        margin-top: 0;
        font-size: 4.5rem; font-weight: bold;
    }

    h2 {
        font-size: 3.6rem; font-weight: bold;
    }

    h3 {
        font-size: 2.9rem;
    }

    h4 {
        font-size: 2.45rem;
    }

    p {
        margin: .9em 0;
        font-size: 2rem; line-height: 1.6em; color: $color-text;
    }

    hr {
        margin: 3rem auto;
        border: solid currentColor; border-width: .4rem 0 0 0;
        opacity: .2;
        @include border-radius(.5rem);

        + * {
            margin-top: 3rem;
        }
    }
    
    
    
    /* LISTS */

    ul, ol {
        margin: 2rem 0;

        li {
            padding: .5rem 0 0 0;
            font-size: 2rem; line-height: 1.6em;
        }

        > li > ul,
        > li > ol {
            margin: .3rem 0;
        }
    }

    ul {
        padding: 0 0 0 3rem;
    }

    ol {
        padding: 0 0 0 2rem;
        counter-reset: ol-counter;

        > li {
            display: block;
            counter-increment: ol-counter;

            &:before {
                content: counter(ol-counter) ".";
                margin: 0 .5em;
                color: inherit; font-size: .9em;
            }
        }
    }
    
    
    
    /* LINKS & BUTTONS */

    a {
        padding: .1em .2em;
        cursor: pointer;
        background-color: $color-main; border: .1em solid $color-main;
        color: $color-aspect; font-weight: bold; text-decoration: none;
        @include transition(.15s);

        &:hover,
        &:focus {
            background-color: $color-aspect;
            color: $color-main; text-decoration: none;
        }
    }
}

a, button {

    &:focus {
        outline-width: .3rem;
        outline-offset: .1rem;
        outline-style: dashed;
        outline-color: currentColor;
    }
}
/* ... */

